fix: searchbox title fontsize on mobile

--- a/src/styles/landing/searchbox.less
+++ b/src/styles/landing/searchbox.less
@@ -127,7 +127,9 @@
   .searchbox {
     padding: 16px 8px 20px 8px;
     &-title {
-      font-size: 22px;
+      span {
+        font-size: 1.5rem;
+      }
     }
     &-input {
       padding: 6px 20px 16px 20px;
